Update Vercel configuration to include Prisma generated files for both .js and .ts files

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
   "functions": {
-    "api/**/*.ts": {
-      "includeFiles": [
-        "lib/generated/prisma/**"
-      ]
+    "api/**.js": {
+      "includeFiles": "lib/generated/prisma/**"
+    },
+    "api/**.ts": {
+      "includeFiles": "lib/generated/prisma/**"
     }
   }
 }
