Update Prisma client binary target to include "rhel-openssl-3.0.x" in schema.prisma

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "api/**.js": {
       "includeFiles": "lib/generated/prisma/**"
     },
-    "api/**.ts": {
+    "app/**/*.ts": {
       "includeFiles": "lib/generated/prisma/**"
     }
   }
